Fix audio device detection

--- a/config/client.env
+++ b/config/client.env
@@ -10,3 +10,13 @@ LLM_LOCAL_MODEL=local-model
 
 # タイムアウト設定
 REQUEST_TIMEOUT=30
+
+# --- 音声デバイス設定 (OpenComm2 優先) ---
+WAKE_AUDIO_PREFER=bluetooth,usb,builtin,other
+WAKE_AUDIO_PREF_IN_NAME=OpenComm2 by Shokz
+WAKE_AUDIO_PREF_OUT_NAME=OpenComm2 by Shokz
+WAKE_AUDIO_PAIR_SAME_NAME=1
+# 任意：初回だけ対話選択
+# WAKE_AUDIO_SELECT=1
+# 不安定機器があれば
+# WAKE_AUDIO_BLOCKLIST=
