--- a/config/client.env
+++ b/config/client.env
@@ -1,20 +1,41 @@
 # Wake Saiteku Client Configuration
 
-# リモートサーバー設定
-SERVER_URL=http://localhost:8001/inference
+# リモートサーバー設定（v1 音声APIのSSEストリームを利用）
+SERVER_URL=http://100.86.115.54:9020/v1/audio/inference/stream
+SERVER_API_MODE=v1
 
 # ローカルフォールバック設定
 LOCAL_STT_ENABLED=true
 LLM_LOCAL_URL=http://127.0.0.1:8081/v1/chat/completions
 LLM_LOCAL_MODEL=local-model
 
-# タイムアウト設定
-REQUEST_TIMEOUT=30
+# タイムアウト設定（SSEでも使用）
+REQUEST_TIMEOUT=120
+READ_TIMEOUT=120
+
+# Chat API の利用（音声APIのreplyをそのまま使うなら false 推奨）
+PREFER_CHAT_API=false
+
+# --- TTS 設定 (Kokoro) ---
+ENABLE_TTS_PLAYBACK=true
+SERVER_TTS_URL=http://127.0.0.1:9051/tts
+TTS_VOICE=jf_alpha
+TTS_SAMPLE_RATE=16000
+TTS_SPEED=1.0
+AUTO_START_TTS=true
+# Kokoroサーバーを専用venvで起動する場合にコマンドを指定（{host}/{port} 置換に対応）
+TTS_AUTOSTART_CMD=~/venvs/utts311/bin/python -m uvicorn mini_kokoro_server:app --host {host} --port {port} --log-level info
+TTS_AUTOSTART_WAIT=8
+WAKE_SKIP_TTS_TEST=0
+WAKE_FORCE_OUTPUT_CH=2
+WAKE_FALLBACK_OUT_DEV=2,3
+WAKE_FORCE_OUTPUT_SR=48000
+WAKE_STREAM_FALLBACK=true
 
 # --- 音声デバイス設定 (OpenComm2 優先) ---
 WAKE_AUDIO_PREFER=bluetooth,usb,builtin,other
-WAKE_AUDIO_PREF_IN_NAME=OpenComm2 by Shokz
-WAKE_AUDIO_PREF_OUT_NAME=OpenComm2 by Shokz
+WAKE_AUDIO_PREF_IN_NAME="OpenComm2 by Shokz"
+WAKE_AUDIO_PREF_OUT_NAME="OpenComm2 by Shokz"
 WAKE_AUDIO_PAIR_SAME_NAME=1
 # 任意：初回だけ対話選択
 # WAKE_AUDIO_SELECT=1
